clusters/on-prem/apps/gitactionboard/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gitactionboard
  labels:
    name: gitactionboard
    goldilocks.fairwinds.com/enabled: "true"
