clusters/on-prem/apps/gitactionboard/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitactionboard
  namespace: gitactionboard
  labels:
    app: gitactionboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitactionboard
  serviceName: gitactionboard
  template:
    metadata:
      labels:
        app: gitactionboard
    spec:
      containers:
      - name: gitactionboard
        image: ottoopensource/gitactionboard:4.1.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
