clusters/on-prem/apps/gitactionboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitactionboard-service
  namespace: gitactionboard
spec:
  selector:
    app: gitactionboard
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
